test/should-fail/vsgc2923.f3
/**
 * Regress test for VSGC-2923.
 *
 *  Referencing a non-static instance var from a static 
 *  context causes a javadump, and an incorrect error msg.
 *
 * @test/compile-error
 */

class vsgc2923 {
   var x = 10;
}

// this line used to crash in back-end
vsgc2923.x = 90;

